# practice-book-rust-in-action

./: README.md
ch01/cereals/src/: main.rs
ch01/fruit/src/: main.rs
ch01/hello2/src/: main.rs
ch01/letters/src/: main.rs
ch01/penguin/src/: main.rs
ch01/race/src/: main.rs
ch02/add-floats/src/: main.rs
ch02/complex/: Cargo.toml
ch02/complex/src/: main.rs
ch02/greplite/: Cargo.toml
ch02/greplite/src/: main.rs
ch02/haystack/: Cargo.toml
ch02/haystack/src/: main.rs
ch02/mandelbrot/src/: main.rs
ch02/readfile/: readme.md
ch02/readfile/src/: main.rs
ch03/display/src/: main.rs
ch03/event-log/: Cargo.toml
ch03/event-log/src/: main.rs
ch03/file-doc/: Cargo.toml
ch03/file-doc/src/: main.rs
ch03/file-result/: Cargo.toml
ch03/file-result/src/: main.rs
ch03/file-states/src/: main.rs
ch03/files-neatly-1/: Cargo.toml
ch03/files-neatly-1/src/: main.rs
ch03/files-neatly-2/: Cargo.toml
ch03/files-neatly-2/src/: main.rs
ch03/global-error/: Cargo.toml
ch03/global-error/src/: main.rs
ch03/mock-file/src/: main.rs
ch03/not-quite-file/src/: main.rs
ch04/: Cargo.toml
ch04/check-sats-1/: Cargo.toml
ch04/check-sats-1/src/: main.rs
ch04/check-sats-2/: Cargo.toml
ch04/check-sats-2/src/: main.rs
ch04/check-sats-3/: Cargo.toml
ch04/check-sats-3/src/: main.rs
ch04/check-sats-clone-and-copy-traits/: Cargo.toml
ch04/check-sats-clone-and-copy-traits/src/: main.rs
ch04/rc-groundstation/: Cargo.toml
ch04/rc-groundstation/src/: main.rs
ch04/rc-refcell-groundstation/src/: main.rs
ch04/sat-mailbox/: Cargo.toml
ch04/sat-mailbox/src/: main.rs
ch04/short-lived-strategy/: Cargo.toml
ch04/short-lived-strategy/src/: main.rs
ch04/src/: check-sats-1.rs  check-sats-2.rs  check-sats-clone-and-copy-traits.rs  rc-groundstation.rs  rc-refcell-groundstation.rs  sat-mailbox.rs  short-lived-strategy.rs
ch05/: Cargo.toml
ch05/bit-patterns/: Cargo.toml
ch05/bit-patterns/src/: main.rs
ch05/endianness/src/: main.rs
ch05/f32-as-u32/src/: main.rs
ch05/impossible-add/: Cargo.toml
ch05/impossible-add/src/: main.rs
ch05/q/src/: lib.rs
ch05/src/: cpu-1.rs  cpu-2.rs  cpu-3.rs  endianness.rs  f32-as-u32.rs  int-vs-int.rs  q7.rs  to-oblivion.rs  u8-to-mock-rand.rs  visualizing-f32.rs
ch05/to-oblivion/src/: main.rs
ch05/visualizing-f32/src/: main.rs
ch06/: Cargo.toml
ch06/src/: heap-via-box.rs  memscan-1.rs  memscan-2.rs  memscan-3.rs  particles.rs  pointer-intro-1.rs  pointer-intro-2.rs  pointer-intro-3.rs  raw-pointer-1.rs  raw-pointer-2.rs
